--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "deploy": "bash scripts/prepare.sh; bash scripts/beta.sh"
   },
   "dependencies": {
+    "@react-native-firebase/app": "^21.3.0",
     "react": "18.3.1",
     "react-native": "0.76.1"
   },
