--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2.1
 jobs:
   beta-android:
     docker:
-      - image: cimg/android:2024.10
+      - image: cimg/android:2024.10-node
     steps:
       - checkout
       - run: yarn beta-android
